# vk_graphics_basic

./: CMakeLists.txt
resources/: sdf.dds  sdf_data
resources/shaders/: add.comp  add.comp.spv  blur.frag  blur.frag.spv  common.h  compile_deferred_shaders.py  compile_explode_shaders.py  compile_normals_shaders.py  compile_quad_render_shaders.py  compile_scan_compute_shaders.py  compile_sdf_shaders.py  compile_shadowmap_shaders.py  compile_simple_render_shaders.py  culling.comp  culling.comp.spv  explode.geom  explode.geom.spv  explode.tesc  explode.tesc.spv  explode.tese  explode.tese.spv  median_filter.frag  median_filter.frag.spv  mrt.frag  mrt.frag.spv  my_quad.frag  my_quad.frag.spv  noise.glsl  normals.frag  normals.frag.spv  normals.geom  normals.geom.spv  quad.frag  quad.frag.spv  quad3_vert.vert  quad3_vert.vert.spv  resolve.frag  resolve.frag.spv  resolve.vert  resolve.vert.spv  (+8 more)
src/render/: render_common.h  scene_mgr.cpp  scene_mgr.h
src/samples/bad_optimization/: CMakeLists.txt  main.cpp  simple_render.cpp  simple_render.h  simple_render_tex.cpp
src/samples/bad_optimization/shaders/: compile_shaders.py  simple.frag  simple.frag.spv  simple.vert  simple.vert.spv
src/samples/homework_task_compute/: CMakeLists.txt  main.cpp  scan_compute.cpp  scan_compute.h  test.py
src/samples/quad2d/: quad2d_render.cpp
src/samples/shadowmap/: CMakeLists.txt  main.cpp  shadowmap_render.cpp  shadowmap_render.h
src/samples/simpleforward/: create_render.cpp  create_render.h  main.cpp  simple_render.cpp  simple_render.h
src/utils/: glfw_window.cpp
